# flipbook

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml
docs/: conf.py  index.rst
docs/flipbook/: index.rst
examples/: flipbook_demo.py  microlensing_fit.py
flipbook/: __init__.py  conftest.py  core.py  types.py
flipbook/utils/: __init__.py  selection.py
tests/: __init__.py  test_flipbook.py
