[metadata]
name = flipbook
author = Amber Malpas
author_email = malpas.1@osu.edu
license = BSD 2-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/AmberLee2427/flipbook/
description = Flipbook reads an MCMC chain and animates model curves for chosen walkers across steps, for a passed in model function f(theta, t) → y, with optional data overlays.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = AmberLee2427/flipbook

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
flipbook = data/*

[tool:pytest]
testpaths = "flipbook" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    flipbook/_astropy_init*
    flipbook/conftest.py
    flipbook/*setup_package*
    flipbook/tests/*
    flipbook/*/tests/*
    flipbook/extern/*
    flipbook/version*
    */flipbook/_astropy_init*
    */flipbook/conftest.py
    */flipbook/*setup_package*
    */flipbook/tests/*
    */flipbook/*/tests/*
    */flipbook/extern/*
    */flipbook/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
